CSI Main Page updated

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
             <a class="navbar-brand" href="index">
-				<img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
+                <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -73,7 +74,7 @@
             </div>
         </nav>
     </header>
-    <div role="main">
+    <!-- <div role="main">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -88,7 +89,7 @@
                             <h1>We are Team CSI</h1>
                             <p>The largest student organisation in GITAM, filled like an ocean with programmers, creators, innovators, designers and people who want to make a difference.</p>
                             <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p>
-                            <!--<p><a class="btn btn-lg btn-primary" href="team" role="button">Meet the Team</a></p>-->
+                            <p><a class="btn btn-lg btn-primary" href="team" role="button">Meet the Team</a></p>
                         </div>
                     </div>
                 </div>
@@ -113,15 +114,30 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
             <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+         </div> -->
+        </br></br>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row start">
+                    <div class="col-md-3">
+                        <img src="assets/brand/MARTIN/Logo.png"  class="img img-fluid" class="featurette-image img-fluid mx-auto" alt="Generic placeholder image">
+                        M.ART.IN., brought to you by the Team of CSI, GITAM Student Branch, is the CSI Annual Fest to be conducted for the student community of beginners, professionals, enthusiasts and practitioners of Machine Learning and Artificial Intelligence, in Visakhapatnam. The fest includes a balance of technical and non-technical events which provides the students with a scope for accelerating personal growth in an entertaining series of events.
+                        <p><a class="btn btn-lg btn-primary batn" href="https://csigitam.github.io/martin/" role="button">Visit us</a></p>
+                    </div>
+                    <div class="col-md-9 poster">
+                        <img src="assets/brand/MARTIN/Publicity Poster.jpg"  class="img img-fluid" class="featurette-image img-fluid mx-auto" alt="Generic placeholder image" height="50" width="700">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container marketing">
             <div class="row featurette">
@@ -143,10 +159,17 @@
                     <h2 class="featurette-heading">CSI <span class="text-muted">GITAM Student Branch</span></h2>
                     <p class="lead">GITAM CSI Student Branch was introduced on 1<sup>st</sup> April, 2009, in order to inculcate the professional elements provided by the student branch to its students. It comprises of over 700 students currently.</p>
                     <p>Under the aegis of CSI Student Branch, GITAM, several events like fests, workshops, seminars, social activities and internal training sessions through student maintained clubs are regularly held. These activities help the students in imparting the ideas and knowledge required in this fast growing IT enhanced world.</p>
-                    <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p>
+                    <!-- <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p> -->
                 </div>
             </div>
+
             <hr class="featurette-divider">
+            <div class="container-fluid bg">
+                <div class="container">
+                            <h1>Honoured as the "Highest Committed Student Branch Activist" Award</h1>
+                            <p>Vinay Kothapalli was awarded the "Highest Committed Student Branch Activist" for CSI, GITAM Student Branch (Zone V) for the academic year 2017-18</p>
+                </div>
+            </div>
             <div class="row featurette">
                 <div class="col-md-12">
                     <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
@@ -178,6 +201,7 @@
                 </div>
             </div>
             <hr class="featurette-divider">
+        </div>
         </div>
         <footer class="container">
             <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
