--- a/events.html
+++ b/events.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -81,6 +82,21 @@
 				<p>We've successfully organised and hosted 14+ seminars, workshops &amp; fests last year and this time around we intend to go <em>beyond!</em></p>
 			</div>
 		</div>
+		<hr class="featurette-divider">
+				<h2 class="text-center"><em>&middot; This Academic Year  &middot;</em></h2>
+			<hr class="featurette-divider">
+				<div class="container marketing">
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/brand/MARTIN/all.jpg" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>MARTIN <br><span class="text-muted">Voice Enabled Future</span></h2>
+					<p>On 20<sup>th</sup> Feburary 2019, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, will be organising workshop on <b>Voice Enabled Future</b>.The resource person and the Chief Guest for the event was Prof. Ravi Vatrapu, Centre of Business Data Analytics, Copenhagen Business School, Denmark. The workshop began as an interactive session with Prof. Ravi Vatrapu laying out the foundation of Social Set Analysis with examples of where an organisation can leverage its benefits. He introduced several fundamentals to serve as a base to the workshop and involved students with his questions.</p>
+					<p><strong>Participation:</strong> ...</p>
+				</div>
+			</div>
+			<hr class="featurette-divider">
 		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
