Mobile Version Updated

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
         </br></br>
         <div class="container-fluid">
             <div class="container">
-                <div class="row start">
+                <div class="row">
                     <div class="col-md-3">
                         <img src="assets/brand/MARTIN/Logo.png"  class="img img-fluid" class="featurette-image img-fluid mx-auto" alt="Generic placeholder image">
                         M.ART.IN., brought to you by the Team of CSI, GITAM Student Branch, is the CSI Annual Fest to be conducted for the student community of beginners, professionals, enthusiasts and practitioners of Machine Learning and Artificial Intelligence, in Visakhapatnam. The fest includes a balance of technical and non-technical events which provides the students with a scope for accelerating personal growth in an entertaining series of events.
                         <p><a class="btn btn-lg btn-primary batn" href="https://csigitam.github.io/martin/" role="button">Visit us</a></p>
                     </div>
                     <div class="col-md-9 poster">
-                        <img src="assets/brand/MARTIN/Publicity Poster.jpg"  class="img img-fluid" class="featurette-image img-fluid mx-auto" alt="Generic placeholder image" height="50" width="700">
+                        <img src="assets/brand/MARTIN/Publicity Poster.jpg" class="img img-fluid featurette-image img-fluid mx-auto"  alt="Generic placeholder image">
                     </div>
                 </div>
             </div>
@@ -162,6 +162,7 @@
                     <!-- <p><a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSd1mpR74gKp9kUfBPN4WYPzCSiax83Ezeq7Se26KnOHfNABXQ/viewform" target="_blank" role="button">Register Now</a></p> -->
                 </div>
             </div>
+        </div>
 
             <hr class="featurette-divider">
             <div class="container-fluid bg">
@@ -170,6 +171,8 @@
                             <p>Vinay Kothapalli was awarded the "Highest Committed Student Branch Activist" for CSI, GITAM Student Branch (Zone V) for the academic year 2017-18</p>
                 </div>
             </div>
+            <div class="container-fluid">
+                <div class="container">
             <div class="row featurette">
                 <div class="col-md-12">
                     <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
@@ -199,10 +202,10 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </div></div>
             <hr class="featurette-divider">
-        </div>
-        </div>
+        
+        
         <footer class="container">
             <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
         </footer>
