--- a/events.html
+++ b/events.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -83,20 +82,28 @@
 			</div>
 		</div>
 		<hr class="featurette-divider">
-				<h2 class="text-center"><em>&middot; This Academic Year  &middot;</em></h2>
-			<hr class="featurette-divider">
-				<div class="container marketing">
+		<h2 class="text-center"><em>&middot; This Academic Year &middot;</em></h2>
+		<hr class="featurette-divider">
+		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
-					<img src="assets/brand/MARTIN/all.jpg" class="img-fluid">
+					<img src="assets/events/2018-19/2019-02-04 MARTIN.png" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
-					<h2>MARTIN <br><span class="text-muted">Voice Enabled Future</span></h2>
-					<p>On 20<sup>th</sup> Feburary 2019, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, will be organising workshop on <b>Voice Enabled Future</b>.The resource person and the Chief Guest for the event was Prof. Ravi Vatrapu, Centre of Business Data Analytics, Copenhagen Business School, Denmark. The workshop began as an interactive session with Prof. Ravi Vatrapu laying out the foundation of Social Set Analysis with examples of where an organisation can leverage its benefits. He introduced several fundamentals to serve as a base to the workshop and involved students with his questions.</p>
-					<p><strong>Participation:</strong> ...</p>
+					<h2>MARTIN <br><span class="text-muted">Voice-enabled Future</span></h2>
+					<p>The CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organized their Annual fest named "M.ART.IN. 2k19" on 5th and 6th March 2018. The fest was inaugurated by Dr. S. Raja and Prof. M. Shashi. A multitude of technical and non-technical events were organised over the period of two days alongwith a hands-on workshop on “Smart Automation with AI Assistants” was also conducted, dealing with technologies based on Internet-of-Things, Cloud Computing and Amazon Alexa.</p>
+					<p><strong>Participation:</strong> 300+ students</p>
+					<p>
+						<a class="btn btn-success" href="https://csigitam.github.io/martin/" target="_blank" role="button">Visit website &raquo;</a>
+						<a class="btn btn-outline-success" href="assets/report/Martin.pdf" target="_blank" role="button">View details &raquo;</a>
+						<a class="btn btn-outline-info" href="assets/report/2018-19-annual-report.pdf" target="_blank" role="button">
+							Annual Report
+						</a>
+					</p>
 				</div>
 			</div>
-			<hr class="featurette-divider">
+		</div>
+		<hr class="featurette-divider">
 		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
@@ -105,7 +112,10 @@
 				<div class="col-lg-5">
 					<h2>Workshop <br><span class="text-muted">on Big Data Analytics</span></h2>
 					<p>On 20<sup>th</sup> November 2018, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organised a workshop on Big Data Analytics. The resource person and the Chief Guest for the event was Prof. Ravi Vatrapu, Centre of Business Data Analytics, Copenhagen Business School, Denmark. The workshop began as an interactive session with Prof. Ravi Vatrapu laying out the foundation of Social Set Analysis with examples of where an organisation can leverage its benefits. He introduced several fundamentals to serve as a base to the workshop and involved students with his questions.</p>
-					<p><strong>Participation:</strong> 150+ Students</p>
+					<p><strong>Participation:</strong> 150+ students</p>
+					<p>
+						<a class="btn btn-success" href="assets/report/Big Data Analytics Denmark.pdf" target="_blank" role="button">View details &raquo;</a>
+					</p>
 				</div>
 			</div>
 			<hr class="featurette-divider">
@@ -114,6 +124,9 @@
 					<h2>Two-Day Workshop <br><span class="text-muted">on Cyber Security</span></h2>
 					<p>From 31<sup>st</sup> August to 1<sup>st</sup> September 2018, the CSI GITAM Student Branch, in association with the Department of Computer Science Engineering, had organized a two-day workshop on Cyber Security which was made to inculcate the students with a basic understanding of the world of ethical hacking and cyber security. The speaker for the workshop was Mr. Vinod T. Senthil, Founder, Managing Director &amp; Chief Technical Officer, infySEC, Chennai. The session was a mix of theory and hands-on where the participants tried hacking their way through a "Capture The Flag" challenge hosted by infySEC.</p>
 					<p><strong>Participation:</strong> 70+ students</p>
+					<p>
+						<a class="btn btn-success" href="assets/report/Cyber Security InfySEC.pdf" target="_blank" role="button">View details &raquo;</a>
+					</p>
 				</div>
 				<div class="col-lg-5">
 					<img src="assets/events/2018-19/2018-08-31 Cyber Security.png" class="img-fluid">
@@ -128,11 +141,10 @@
 					<h2>Career Options <span class="text-muted">after Engineering Education</span></h2>
 					<p>On 17<sup>th</sup> July 2018, a seminar on "Career Options after Engineering Education" was organized by the CSI, GITAM Student Branch, in association with the Department of CSE. The guest speakers for the event were Mr Alosies George, Founder and Director, George Prep, and Shri Ram Mohan Adibhatla, Head - Verbal Ability, George Prep. The Principal, Head of Department, CSE, and the Training &amp; Placements Officer (TPO) addressed the gathering and offered their exprience and advice regarding the ever-changing demands of placements. The guest speakers enlightened the students about the various career paths that competitive exams such as GRE &amp; CAT offer and then recommended pursuing higher studies to build a network and foundation to gain a stable future. They then introduced several guidelines for making definitive decisions for their future.</p>
 					<p><strong>Participation:</strong> 500+ students</p>
-					<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 				</div>
 			</div>
 			<hr class="featurette-divider">
-				<h2 class="text-center"><em>&middot; Previously &middot;</em></h2>
+			<h2 class="text-center"><em>&middot; Previously &middot;</em></h2>
 			<hr class="featurette-divider">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2">
@@ -147,7 +159,6 @@
 					<h2>Cloud Computing and NLP</h2>
 					<p>The CSI GITAM Student Branch in association with the department of Computer Science Engineering organized a seminar on Cloud Computing and Natural Language Processing on 9<sup>th</sup> March 2018. The main speaker for the event was Vijay Ponduru, Lead Application Developer, Nuveen Technologies, San Francisco. He gave an insight on the working of the cloud computing systems and the basics of natural language processing while explaining its relevance in the industry and its scope in the future.</p>
 					<p><strong>Participation:</strong> 80+ students</p>
-					<!-- <p><a class="btn btn-success" href="assets/report/Virtual Reality and Augumented Reality.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 				</div>
 				<div class="col-lg-5">
 					<img src="assets/events/2017-18/2018-03-09 NLP.jpg" class="img-fluid">
@@ -159,10 +170,15 @@
 					<img src="assets/events/2017-18/2018-03-05 Ethereal 2k18.jpg" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
-					<h2>Ethereal 2K18, <span class="text-muted">CSI Annual Fest</span></h2>
+					<h2>Ethereal 2K18, <span class="text-muted">Annual Fest</span></h2>
 					<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering had organized the Annual fest named "Ethereal 2k18" on 5<sup>th</sup> and 6<sup>th</sup> March 2018. The fest was inaugurated by Professor Siba K Udgata. The two-day fest featured a vast variety of technical and non-technical events to promote the talent among students. A workshop on Smart Automation was also be conducted over the two days dealing with technologies based on Internet-of-Things (IoT) and Computational Intelligence.</p>
 					<p><strong>Participation:</strong> 400+ students</p>
-					<!-- <p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
+					<p>
+						<a class="btn btn-success" href="assets/report/Ethereal.pdf" target="_blank" role="button">View details &raquo;</a>
+						<a class="btn btn-outline-info" href="assets/report/2017-18-annual-report.pdf" target="_blank" role="button">
+							Annual Report 2017-18
+						</a>
+					</p>
 				</div>
 			</div>
 			<hr class="featurette-divider">
@@ -171,7 +187,6 @@
 					<h2>Cloud Computing <span class="text-muted">by Alibaba Cloud</span></h2>
 					<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering hosted a workshop on "Cloud Computing" for Alibaba Cloud as a part of the CSI Annual Fest "Ethereal 2K18" on 3<sup>rd</sup> March 2018. The featured speakers for the event were - Shri. Sharat Chandra, MVP, Alibaba Cloud India Ltd and Shri. Goutham Upadhayay, Chief Technical Officer, Alibaba Cloud. They briefly explained the importance and the working of the cloud computing system with the live example of the WordPress website hosting on the Alibaba Cloud.</p>
 					<p><strong>Participation:</strong> 200+ students</p>
-					<!-- <p><a class="btn btn-success" href="assets/report/Cyber Security Workshop.pdf" target="_blank" role="button">View details &raquo;</a></p> -->
 				</div>
 				<div class="col-lg-5">
 					<img src="assets/events/2017-18/2018-03-03 Alibaba Cloud Computing Workshop.jpg" class="img-fluid">
@@ -235,7 +250,13 @@
 					<p><strong>Theme: </strong>"Rising India &mdash; A Step towards Digitalization"</p>
 					<p class="text-justify">The CSI APSC 2017-18 was hosted at GITAM, Visakhapatnam on 24<sup>th</sup> and 25<sup>th</sup> November, 2017. Over the two days a diverse variety of events took place for the convention such as Code Savvy, Quiztal Maze, Paper presentation, etc. and workshops on Cyber Security, IoT, VR & AR.</p>
 					<p><strong>Participation:</strong> 550+ students</p>
-					<p><a class="btn btn-success" href="http://www.gitam.edu/csiconvention/" target="_blank" role="button">Visit website &raquo;</a></p>
+					<p>
+						<a class="btn btn-success" href="http://www.gitam.edu/csiconvention/" target="_blank" role="button">Visit website &raquo;</a>
+						<a class="btn btn-outline-success" href="assets/report/APSSC.pdf" target="_blank" role="button">View details &raquo;</a>
+						<a class="btn btn-outline-info" href="assets/report/2017-18-annual-report.pdf" target="_blank" role="button">
+							Annual Report
+						</a>
+					</p>
 				</div>
 			</div>
 			<hr class="featurette-divider">
@@ -351,5 +372,4 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
-
 </html>
