Fixed About info on homepage
CSI started in GITAM on 4th August, not 1st April, 2009.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-md-7 order-md-1">
                     <h2 class="featurette-heading">CSI <span class="text-muted">GITAM Student Branch</span></h2>
-                    <p class="lead">GITAM CSI Student Branch was introduced on 1<sup>st</sup> April, 2009, in order to inculcate the professional elements provided by the student branch to its students. It comprises of over 700 students currently.</p>
+                    <p class="lead">GITAM CSI Student Branch was introduced on 4<sup>th</sup> August, 2009, in order to inculcate the professional elements provided by the student branch to its students. It comprises of over 700 students currently.</p>
                     <p>Under the aegis of CSI Student Branch, GITAM, several events like fests, workshops, seminars, social activities and internal training sessions through student maintained clubs are regularly held. These activities help the students in imparting the ideas and knowledge required in this fast growing IT enhanced world.</p>
                 </div>
             </div>
