Updated initial information for the symposium

--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
                         <div class="col-lg-4">
                             <h2>For enquries,</h2>
                             <p></p>
-                            <p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
-                            <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
+                            <p>Email us at :- <p><a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p></p>
+                            <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Connect on Facebook &raquo;</a></p>
                         </div>
                         <div class="col-lg-8 g-map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.2353112901123!2d83.37372529955334!3d17.780634695966484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1cdf012f1b%3A0x6c1c27dfb649611a!2sChandrahas+Bhavan%2C+Rushikonda%2C+Visakhapatnam%2C+Andhra+Pradesh+530045%2C+India!5e0!3m2!1sen!2sus!4v1508218001772" frameborder="0" allowfullscreen></iframe>
