--- a/events.html
+++ b/events.html
@@ -87,6 +87,24 @@
 		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-5 offset-lg-1">
+					<h2>Cloud Computing <br><span class="text-muted">Amazon Web Services</span></h2>
+					<p>The CSI GITAM Student Branch in association with the Department of Computer Science Engineering is going to organize the technical Symposium in the month of December named as <strong>ETHEREAL 2.0</strong> - 'Explore Beyond the Limits'.
+						The Symposium comprehends a chain of Technical and Non-Technical events. There's a lot in line to be excited about.
+						Come and be part of this enthralling Symposium and make it a imperishable one. Stay tuned for further updates.
+					</p>
+					<p>
+						<a class="btn btn-success" href="#"" target="_blank" role="button">Visit website &raquo;</a>
+					</p>
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2018-19/coming_soon.jpg" class="img-fluid">
+				</div>
+			</div>
+		</div>
+		<hr class="featurette-divider">
+		<div class="container marketing">
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
 					<img src="assets/events/2018-19/2019-02-04 MARTIN.png" class="img-fluid">
 				</div>
 				<div class="col-lg-5">
@@ -133,6 +151,7 @@
 				</div>
 			</div>
 			<hr class="featurette-divider">
+			<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-5">
 					<img src="assets/events/2018-19/2018-07-17 Career Orientation George Prep.png" class="img-fluid">
@@ -142,6 +161,7 @@
 					<p>On 17<sup>th</sup> July 2018, a seminar on "Career Options after Engineering Education" was organized by the CSI, GITAM Student Branch, in association with the Department of CSE. The guest speakers for the event were Mr Alosies George, Founder and Director, George Prep, and Shri Ram Mohan Adibhatla, Head - Verbal Ability, George Prep. The Principal, Head of Department, CSE, and the Training &amp; Placements Officer (TPO) addressed the gathering and offered their exprience and advice regarding the ever-changing demands of placements. The guest speakers enlightened the students about the various career paths that competitive exams such as GRE &amp; CAT offer and then recommended pursuing higher studies to build a network and foundation to gain a stable future. They then introduced several guidelines for making definitive decisions for their future.</p>
 					<p><strong>Participation:</strong> 500+ students</p>
 				</div>
+			</div>
 			</div>
 			<hr class="featurette-divider">
 			<h2 class="text-center"><em>&middot; Previously &middot;</em></h2>
