--- a/team-2017.html
+++ b/team-2017.html
@@ -205,7 +205,7 @@
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/Rayudu Nirmal Venkat Pavan Kumar.png" alt="R. N. V. Pavan Kumar" width="140" height="140">
                         <h3>R. N. V. Pavan Kumar</h3>
-                        <p>Head of Hospiatlity</p>
+                        <p>Head of Hospitality</p>
                         <p><a class="btn btn-danger btn-lg left-icon" href="mailto:rayuduvenkat98@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
                         <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/Pavan-Rayudu" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
                     </div>
