--- a/team.html
+++ b/team.html
@@ -80,25 +80,25 @@
                     <p>We proudly take the opportunity to introduce the backbone of CSI, GITAM Student Branch who have led every event on the road to success!</p>
                 </div>
             </div>
-            <div class="container marketing">
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/K Thammi Reddy.jpg" alt="K. Thammi Reddy" width="140" height="140">
-                        <h3>Prof. K. Thammi Reddy</h3>
-                        <p>Head of Department, CSE</p>
+                <div class="container marketing">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 col-sm-12 col-xs-12">
+                            <img class="rounded-circle" src="assets/team/2019/K Thammi Reddy.jpg" alt="K. Thammi Reddy" width="140" height="140">
+                            <h3>Prof. K. Thammi Reddy</h3>
+                            <p>Head of Department, CSE</p>
+                        </div>
+                        <div class="col-lg-4 col-sm-12 col-xs-12">
+                            <img class="rounded-circle" src="assets/team/2019/Sireesha.png" alt="R. Sireesha" width="140" height="140">
+                            <h3>Prof. R. Sireesha</h3>
+                            <p>CSI Faculty Advisor</p>
+                        </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/Sireesha.png" alt="R. Sireesha" width="140" height="140">
-                        <h3>Prof. R. Sireesha</h3>
-                        <p>CSI Faculty Advisor</p>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/Neelima.png" alt="K Neelima Santoshi" width="140" height="140">
-                        <h3>Smt.K. Neelima Santoshi</h3>
-                        <p>CSI Faculty Coordinator</p>
-                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
+                            <img class="rounded-circle" src="assets/team/2019/Neelima.png" alt="K Neelima Santoshi" width="140" height="140">
+                            <h3>Smt.K. Neelima Santoshi</h3>
+                            <p>CSI Faculty Coordinator</p>
+                        </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
                         <img class="rounded-circle" src="assets/team/Nikhil Tomar 2.png" alt="Nikhil Tomar" width="140" height="140">
                         <h3>Nikhil Tomar</h3>
