Added 2k19 team pics

--- a/team-2019.html
+++ b/team-2019.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Neelima.png" alt="K Neelima Santoshi" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Neelima.jpg" alt="K Neelima Santoshi" width="140" height="140">
                         <h3>Smt.K. Neelima Santoshi</h3>
                         <p>CSI Faculty Coordinator</p>
                     </div>
@@ -114,117 +114,157 @@
                         <p>Vice-President</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Harshit Ram.jpeg" alt="A. Sai Sriya" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Harshit Ram.jpeg" alt="Harshit Ram" width="140" height="140">
                         <h3>Harshit Ram</h3>
                         <p>Secretary</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Bharat Ummadi.JPG" alt="A. Sai Sriya" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Bharat Ummadi.JPG" alt="Bharat Ummadi" width="140" height="140">
                         <h3>Bharat Ummadi</h3>
                         <p>Joint Secretary</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Shivani Valluru.png" alt="Arekatla Bhanuja" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Shivani Valluru.png" alt="Shivani Valluru" width="140" height="140">
                         <h3>Shivani Valluru</h3>
                         <p>Treasurer</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/G. V. K.R.M.Virinchi.jpg" alt="Sri Laasya Yarlagadda" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/G. V. K.R.M.Virinchi.jpg" alt="G.V.K.R.M.Virinchi" width="140" height="140">
                         <h3>G. V. K.R.M.Virinchi</h3>
                         <p>Membership Chair</p>
                         <!-- <p><a class="btn btn-info btn-lg" href="https://www.linkedin.com/in/dinesh-sayana-13997b11b/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a> -->
                         </p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Sravani Akula.jpeg" alt="Sri Laasya Yarlagadda" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Sravani Akula.jpeg" alt="Sravani Akula" width="140" height="140">
                         <h3>Sravani Akula</h3>
                         <p>Membership Chair</p>
                         <!-- <p><a class="btn btn-info btn-lg" href="https://www.linkedin.com/in/dinesh-sayana-13997b11b/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a> -->
                         </p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Deepika.jpeg" alt="Upasana Dey" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Deepika.jpeg" alt="Deepika" width="140" height="140">
                         <h3>Deepika</h3>
                         <p>Administrator</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Shashidhar Naidu.jpg" alt="Upasana Dey" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Karthikeya Reddy.jpg" alt="Karthikeya Reddy" width="140" height="140">
+                        <h3>Karthikeya Reddy</h3>
+                        <p>Administrator</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/Shashidhar Naidu.jpg" alt="Shashidhar Naidu" width="140" height="140">
                         <h3>Shashidhar Naidu</h3>
                         <p>Club Manager</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Janga Jahnavi.jpg" alt="Upasana Dey" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Janga Jahnavi.jpg" alt="Janga Jahnavi" width="140" height="140">
                         <h3>Janga Jahnavi</h3>
                         <p>Club Manager</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Uddeshay Pandey.jpg" alt="Upasana Dey" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Uddeshay Pandey.jpg" alt="Uddeshay Pandey" width="140" height="140">
                         <h3>Uddeshay Pandey</h3>
                         <p>Head of Operations</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Akhil Chandra Gorakala.jpg" alt="Sravya Tangirala" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Akhil Chandra Gorakala.jpg" alt="Akhil Chandra" width="140" height="140">
                         <h3>Akhil Chandra Gorakala</h3>
                         <p>Technical Club Manager</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Abhishek Anand.jpeg" alt="T. Jayanth" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Likhith Nemani.jpeg" alt="Likhith Nemani" width="140" height="140">
+                        <h3>Likhith Nemani</h3>
+                        <p>Web Master</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/Abhishek Anand.jpeg" alt="Abhishek Anand" width="140" height="140">
                         <h3>Abhishek Anand</h3>
                         <p>Web Master</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Varun Chunduru.jpg" alt="T. Jayanth" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Varun Chunduru.jpg" alt="Varun Chunduru" width="140" height="140">
                         <h3>Varun Chunduru</h3>
                         <p>Head of Graphic Design</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Abhiram Pratheek.jpg" alt="Sravya Tangirala" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Animesh Rath.jpg" alt="Animesh Rath" width="140" height="140">
+                        <h3>Animesh Rath</h3>
+                        <p>Logistics Head</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/suvarchala devi.jpg" alt="suvarchala Devi" width="140" height="140">
+                        <h3>K.Suvarchala Devi</h3>
+                        <p>Head of Community Service Operations</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/Abhiram Pratheek.jpg" alt="Abhiram Prateek" width="140" height="140">
                         <h3>Abhiram Prateek</h3>
                         <p>Content Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/A.Sai Vamsi varma.jpeg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Akshitha.jpg" alt="Akshitha" width="140" height="140">
+                        <h3>Akshitha</h3>
+                        <p>Content Lead</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/A.Sai Vamsi varma.jpeg" alt="A.Sai Vamsi Varma" width="140" height="140">
                         <h3>A.Sai Vamsi varma</h3>
                         <p>Photography Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Sowmya kothakota.jpg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Sowmya kothakota.jpg" alt="Sowmya kothakota" width="140" height="140">
                         <h3>Sowmya kothakota</h3>
                         <p>Head of Production Design</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Sruthi Thangudu.jpg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Sruthi Thangudu.jpg" alt="Sruthi Thangudu" width="140" height="140">
                         <h3>Sruthi Thangudu</h3>
                         <p>Head of Production Design</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Tanmay Sen.jpg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Tanmay Sen.jpg" alt="Tanmay Sen" width="140" height="140">
                         <h3>Tanmay Sen</h3>
                         <p>Graphic Designer</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Sri Shriya Challapuram.jpg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Sri Shriya Challapuram.jpg" alt="Sri Shriya Challapuram" width="140" height="140">
                         <h3>Sri Shriya Challapuram</h3>
                         <p>Head of Publicity</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/P.V.S. Ashish Kumar.jpg" alt="P Deepsikha Varma" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Dave Richards.jpeg" alt="Dave Richards" width="140" height="140">
+                        <h3>Dave Richards</h3>
+                        <p>Head of Publicity</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/P.V.S. Ashish Kumar.jpg" alt="P.V.S. Ashish Kumar" width="140" height="140">
                         <h3>P.V.S. Ashish Kumar</h3>
                         <p>Technical Head</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Shoubhik Sadhu.jpg" alt="M. Meher Suneel" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Shoubhik Sadhu.jpg" alt="Shoubhik Sadhu" width="140" height="140">
                         <h3>Shoubhik Sadhu</h3>
                         <p>VFX and Video Designer</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Roshini Ragunath.jpeg" alt="K V Sai Nikitha" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Roshini Ragunath.jpeg" alt="Roshini Raghunath" width="140" height="140">
                         <h3>Roshini Raghunath</h3>
                         <p>PR Lead</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Lakshmi Meghana.jpg" alt="T. Jayanth" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Lakshmi Meghana.jpg" alt="Lakshmi Meghana" width="140" height="140">
                         <h3>Lakshmi Meghana</h3>
+                        <p>Event Manager</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/Yaswanth.jpeg" alt="Yaswanth" width="140" height="140">
+                        <h3>Yaswanth Notla</h3>
+                        <p>Event Manager</p>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-xs-12">
+                        <img class="rounded-circle" src="assets/team/2019/Preethi.jpg" alt="Preethi" width="140" height="140">
+                        <h3>Preethi Prasuna</h3>
                         <p>Event Manager</p>
                     </div>
         
