--- a/team.html
+++ b/team.html
@@ -76,8 +76,8 @@
         <div role="main">
             <div class="jumbotron j-team">
                 <div class="container">
-                    <h2 class="display-3">Meet the Team</h2>
-                    <p>We proudly take the opportunity to introduce the backbone of CSI, GITAM Student Branch who have led every event on the road to success!</p>
+                    <h2 class="display-3">Here's our Team of 2018!</h2>
+                    <a href="team-2019.html" class="btn btn-light text-info">View our current team!</a>    
                 </div>
             </div>
                 <div class="container marketing">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-lg-4 offset-lg-2 col-sm-12 col-xs-12">
-                            <img class="rounded-circle" src="assets/team/2019/Neelima.png" alt="K Neelima Santoshi" width="140" height="140">
+                            <img class="rounded-circle" src="assets/team/2019/Neelima.jpg" alt="K Neelima Santoshi" width="140" height="140">
                             <h3>Smt.K. Neelima Santoshi</h3>
                             <p>CSI Faculty Coordinator</p>
                         </div>
@@ -212,14 +212,14 @@
                     </div>
                 </div>
                 <hr class="featurette-divider">
-                <div class="jumbotron text-info" style="background: none">
+                <!-- <div class="jumbotron text-info" style="background: none">
                     <div class="container">
                         <h2 class="display-3">A little something for the seniors!</h2>
                         <p>They're the ones who guides us through our journey :)</p>
                         <a href="team-2017.html" class="btn btn-info">Check out our team from 2017! 🚀</a>
                     </div>
-                </div>
-                <hr class="featurette-divider">
+                </div> -->
+                <!-- <hr class="featurette-divider"> -->
                 <div class="row featurette">
                     <div class="col-md-12">
                         <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
