--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="team">Team</a>
+                            <a class="nav-link" href="team-2019">Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact">Contact</a>
