Updated some team pics

--- a/team.html
+++ b/team.html
@@ -143,8 +143,8 @@
                         </p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Deepika.jpeg" alt="Deepika" width="140" height="140">
-                        <h3>Deepika</h3>
+                        <img class="rounded-circle" src="assets/team/2019/Deepika.jpeg" alt="Deepika Valluri" width="140" height="140">
+                        <h3>Deepika Valluri</h3>
                         <p>Administrator</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
