Fixed Image issue

--- a/team.html
+++ b/team.html
@@ -100,7 +100,7 @@
                         <p>CSI Faculty Coordinator</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Lava Kumar.JPG" alt="Nikhil Tomar" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Lava Kumar.JPG" alt="Lava Kumar" width="140" height="140">
                         <h3>K. Lava Kumar</h3>
                         <p>President</p>
                     </div>
@@ -119,7 +119,7 @@
                         <p>Secretary</p>
                     </div>
                     <div class="col-lg-4 col-sm-12 col-xs-12">
-                        <img class="rounded-circle" src="assets/team/2019/Bharat Ummadi.JPG" alt="Bharat Ummadi" width="140" height="140">
+                        <img class="rounded-circle" src="assets/team/2019/Bharat Ummadi.jpg" alt="Bharat Ummadi" width="140" height="140">
                         <h3>Bharat Ummadi</h3>
                         <p>Joint Secretary</p>
                     </div>
