--- a/team-2018.html
+++ b/team-2018.html
@@ -212,14 +212,14 @@
                     </div>
                 </div>
                 <hr class="featurette-divider">
-                <!-- <div class="jumbotron text-info" style="background: none">
+                <div class="jumbotron text-info" style="background: none">
                     <div class="container">
                         <h2 class="display-3">A little something for the seniors!</h2>
                         <p>They're the ones who guides us through our journey :)</p>
                         <a href="team-2017.html" class="btn btn-info">Check out our team from 2017! 🚀</a>
                     </div>
-                </div> -->
-                <!-- <hr class="featurette-divider"> -->
+                </div>
+                <hr class="featurette-divider">
                 <div class="row featurette">
                     <div class="col-md-12">
                         <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
