--- a/team.html
+++ b/team.html
@@ -275,6 +275,7 @@
                         <h2 class="display-3">A little something for the seniors!</h2>
                         <p>They're the ones who guides us through our journey :)</p>
                         <a href="team-2018.html" class="btn btn-info">Check out our team from 2018! 🚀</a>
+                        <a href="team-2017.html" class="btn btn-info">Check out our team from 2017! 🚀</a>
                     </div>
                 </div>
                 <hr class="featurette-divider">
